--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,15 @@ dependencies {
   compile 'com.facebook.stetho:stetho:1.3.0'
   compile 'com.facebook.stetho:stetho-okhttp:1.3.0'
 
+  compile 'com.devbrackets.android:exomedia:3.0.0-preview1'
+  compile 'com.android.support:appcompat-v7:23.3.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
+
+  // Playlist support
+  compile 'com.devbrackets.android:playlistcore:1.0.2'
+  //ExoPlayer
+  compile 'com.devbrackets.android:exomedia:3.0.0-preview1'
+
   // testing
   testCompile 'com.hannesdorfmann.mosby:testing:'+ rootProject.ext.mosbyVersion
   testCompile 'com.squareup.retrofit:retrofit-mock:'+ rootProject.ext.retrofitVersion
@@ -109,5 +118,6 @@ dependencies {
 // Espresso-idling-resource for synchronization with background jobs
   androidTestCompile 'com.android.support.test.espresso:espresso-idling-resource:2.2.1'
   androidTestCompile 'com.squareup.spoon:spoon-client:1.3.1'
+
 
 }
