--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
 
   <uses-permission android:name="android.permission.INTERNET"/>
-
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:name="com.chilliwifi.you2b.MyApplication"
+      android:name="com.chilliwifi.you2b.App"
       android:theme="@style/AppTheme">
     <activity
         android:name="com.chilliwifi.you2b.MainActivity"
@@ -20,6 +20,24 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity
+        android:name=".videoplayer.VideoPlayerActivity"
+        android:configChanges="orientation|keyboardHidden|screenSize"
+        android:label="@string/title_activity_main">
+    </activity>
+    <activity
+        android:name=".videoplayer.FullScreenVideoPlayerActivity"
+        android:configChanges="orientation|keyboardHidden|screenSize"
+        android:label="@string/title_activity_main">
+    </activity>
+
+
+
+    <service
+        android:name=".videoplayer.service.MediaService"
+        android:enabled="true"
+        android:exported="true">
+    </service>
   </application>
 
 </manifest>
