--- a/build.gradle
+++ b/build.gradle
@@ -29,22 +29,26 @@ allprojects {
             url 'https://clojars.org/repo/'
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:23.3.0'
+    }
 }
 
 
 ext {
     minSdk = 14
     targetSdk = 23
-    buildToolsVersion = '23.0.1'
+    buildToolsVersion = '23.0.3'
     compileSdkVersion = 23
 
     javaSourceCompatibility = JavaVersion.VERSION_1_7
     javaTargetCompatibility = JavaVersion.VERSION_1_7
 
     // Libraries
-    appcompat7Version = '23.0.1'
-    supportAnnotations = '23.0.1'
-    recyclerviewVersion = '23.0.1'
+    appcompat7Version = '23.3.0'
+    supportAnnotations = '23.3.0'
+    recyclerviewVersion = '23.3.0'
 
     // Libraries for samples
     fragmentargsVersion = '2.1.0'
@@ -68,3 +72,5 @@ ext {
     powermockVersion = '1.6.2'
     leakcanaryVersion = '1.3.1'
 }
+
+
