--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,14 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
+
+        classpath 'com.github.JakeWharton:sdk-manager-plugin:220bf7a88a7072df3ed16dc8466fb144f2817070'
     }
 }
 
 allprojects {
+    apply plugin: 'android-sdk-manager'
+
     repositories {
         jcenter()
         maven {
