Changes for the player only to focus on audio playback

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:label="@string/title_activity_main">
     </activity>
-
+    <activity
+        android:name=".videoplayer.AudioPlayerActivity"
+        android:configChanges="orientation|keyboardHidden|screenSize"
+        android:label="@string/title_activity_main">
+    </activity>
 
 
     <service
