--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
   // Playlist support
   compile 'com.devbrackets.android:playlistcore:1.0.2'
   //ExoPlayer
-  compile 'com.devbrackets.android:exomedia:3.0.0-preview1'
+  compile 'com.devbrackets.android:exomedia:3.0.1'
 
   // testing
   testCompile 'com.hannesdorfmann.mosby:testing:'+ rootProject.ext.mosbyVersion
