--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
   compile 'com.hannesdorfmann.annotatedadapter:annotation:' + rootProject.ext.annotatedadapterVersion
   compile 'com.hannesdorfmann.annotatedadapter:support-recyclerview:' + rootProject.ext.annotatedadapterVersion
 
+  compile 'com.hannesdorfmann.parcelableplease:annotation:' + rootProject.ext.parcelablepleaseVersion
+  apt 'com.hannesdorfmann.parcelableplease:processor:'+ rootProject.ext.parcelablepleaseVersion
+
   compile 'com.google.dagger:dagger:'+rootProject.ext.dagger2Version
   apt 'com.google.dagger:dagger-compiler:'+rootProject.ext.dagger2Version
   compile 'javax.annotation:javax.annotation-api:1.2'
@@ -82,12 +85,11 @@ dependencies {
   compile 'com.facebook.stetho:stetho:1.3.0'
   compile 'com.facebook.stetho:stetho-okhttp:1.3.0'
 
-  compile 'com.devbrackets.android:exomedia:3.0.0-preview1'
   compile 'com.android.support:appcompat-v7:23.3.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
 
   // Playlist support
-  compile 'com.devbrackets.android:playlistcore:1.0.2'
+  compile 'com.devbrackets.android:playlistcore:1.1.1'
   //ExoPlayer
   compile 'com.devbrackets.android:exomedia:3.0.1'
 
