--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,20 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
 
         classpath 'com.github.JakeWharton:sdk-manager-plugin:220bf7a88a7072df3ed16dc8466fb144f2817070'
     }
+
+
+
+
+}
+
+plugins {
+    id 'com.github.ben-manes.versions' version '0.13.0'
 }
 
 allprojects {
@@ -35,10 +43,12 @@ allprojects {
         }
     }
 
+
     configurations.all {
         resolutionStrategy.force 'com.android.support:support-annotations:23.3.0'
     }
 }
+
 
 
 ext {
@@ -62,7 +72,7 @@ ext {
     retrofitVersion = '1.9.0'
     picassoVersion = '2.5.2'
     okhttpVersion ='2.3.0'
-    parcelablepleaseVersion = '1.0.1'
+    parcelablepleaseVersion = '1.0.2'
     annotatedadapterVersion = '1.1.1.1-SNAPSHOT'
     rxjavaVersion = '+'
     rxandroidVersion = '+'
