--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,14 @@ android {
 dependencies {
   compile  'com.hannesdorfmann.mosby:viewstate:'+ rootProject.ext.mosbyVersion
 
-  compile 'com.android.support:recyclerview-v7:' + rootProject.ext.recyclerviewVersion
+  compile 'com.android.support:recyclerview-v7:' + rootProject.ext.appcompat7Version
   compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:recyclerview-v7:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:cardview-v7:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:palette-v7:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:design:' + rootProject.ext.appcompat7Version
+  compile 'com.android.support:percent:' + rootProject.ext.appcompat7Version
 
   compile 'com.jakewharton:butterknife:' + rootProject.ext.butterknifeVersion
 
@@ -85,7 +91,7 @@ dependencies {
   compile 'com.facebook.stetho:stetho:1.3.0'
   compile 'com.facebook.stetho:stetho-okhttp:1.3.0'
 
-  compile 'com.android.support:appcompat-v7:23.3.0'
+
   compile 'com.squareup.picasso:picasso:2.5.2'
 
   // Playlist support
@@ -121,5 +127,6 @@ dependencies {
   androidTestCompile 'com.android.support.test.espresso:espresso-idling-resource:2.2.1'
   androidTestCompile 'com.squareup.spoon:spoon-client:1.3.1'
 
+  compile 'net.steamcrafted:materialiconlib:1.0.3'
 
 }
