Adding SlidingUpPanel (placeholder) , the getTrackUrl is properly working after overriding playAudioItem() in the service.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,4 +129,6 @@ dependencies {
 
   compile 'net.steamcrafted:materialiconlib:1.0.3'
 
+  compile 'com.sothree.slidinguppanel:library:3.3.0'
+
 }
