--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:theme="@style/AppTheme">
     <activity
         android:name="com.chilliwifi.you2b.MainActivity"
-        android:label="@string/title_activity_main">
+        android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -24,7 +24,7 @@
         android:name=".videoplayer.AudioPlayerActivity"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:launchMode="singleInstance"
-        android:label="@string/title_activity_main">
+        android:label="@string/app_name">
     </activity>
 
 
